com.example.project.service.UserServiceImpl getUserByUserId 유저 주문목록 order-servicec와 통신

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,8 @@ greeting:
 
 logging:
   level:
-    come.example.project: DEBUG
+    come.example.project.client: DEBUG
+
 
 #token:
 #  expiration_time: 86400000
